--- a/index.html
+++ b/index.html
@@ -92,10 +92,12 @@
       </select>
       Shoes worn yesterday:
       <select id="shoesWorn" onchange="toggleOtherShoes()">
+        <option value="puma">Puma</option>
         <option value="xero workout">Xero Workout</option>
+        <option value="Floral Boots">Floral Boots</option>
         <option value="xero mountain">Xero Mountain</option>
         <option value="xero DRESS">Xero DRESS</option>
-        <option value="puma">Puma</option>
+
         <option value="other">Other</option>
       </select>
       <input
@@ -161,6 +163,7 @@
       Action plan for today:
       <textarea id="todayPlan" rows="4" cols="50"></textarea><br />
 
+      <br />
       how will you assure <span id="actionTodayPlaceholder">that</span> happens
       today/and other thoughts/stream of consciousness:
       <textarea id="avoidTodayIssue" rows="5" cols="80"></textarea><br />
